--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "firebase": "^11.3.1"
+    "firebase": "^11.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
