--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"]
+  "include": ["src", "modals", "App.tsx", "firebaseConfig.js", "global.d.ts", "types.ts", "partner-web/src/AccountabilityPartnerPage.tsx"]
 }
